src/main/kotlin/com/example/kotlinapitemplate/error/exception/ErrorCode.kt
package com.example.kotlinapitemplate.error.exception

enum class ErrorCode {
}